--- a/stylesheets/breakpoint-slicer/_variables.sass
+++ b/stylesheets/breakpoint-slicer/_variables.sass
@@ -1,2 +1,3 @@
 // The defaults
 $slicer-breakpoints: 0 400px 600px 800px 1010px !default
+$slicer-anti-overlap-corrections: 1px !default
